# virtue-bench-2

./: .gitignore  LICENSE  MANIFEST.in  Paper.md  README.md  pyproject.toml
configs/: eval_caro_gpt4o.yaml  eval_caro_gpt54.yaml  eval_diabolus_gpt4o.yaml  eval_diabolus_gpt54.yaml  eval_ignatian_gpt4o.yaml  eval_ignatian_gpt54.yaml  eval_mundus_gpt4o.yaml  eval_mundus_gpt54.yaml  example_courage_ignatian.yaml  example_full_baseline.yaml  example_psalm_injection.yaml  example_v1_compat.yaml  v1_reproduction_gpt4o.yaml  v1_reproduction_gpt54.yaml
data/courage/: scenarios.csv
data/justice/: scenarios.csv
data/prudence/: scenarios.csv
data/temperance/: scenarios.csv
results/: eval_caro_gpt4o.json  eval_caro_gpt54.json  eval_diabolus_gpt4o.json  eval_diabolus_gpt54.json  eval_ignatian_gpt4o.json  eval_ignatian_gpt54.json  eval_mundus_gpt4o.json  eval_mundus_gpt54.json  fix_report.json  icmi_a_gpt54_ratio_baseline.json  icmi_a_gpt54_ratio_baseline_logs.json  icmi_a_gpt54_ratio_psalms.json  icmi_a_gpt54_ratio_psalms_logs.json  icmi_a_opus_ratio_baseline.json  icmi_a_opus_ratio_baseline_logs.json  icmi_a_opus_ratio_psalms.json  icmi_a_opus_ratio_psalms_logs.json  v1_repro_gpt4o.json  v1_repro_gpt54.json  verification_report.json  verification_report_phase1b.json
scripts/: build_bible_json.py  regenerate_figs_2_4.py
src/virtue_bench/: __init__.py  __main__.py  cli.py  fix_and_correct.py  generate.py  generate_new.py  migrate.py  validate.py  verify.py
src/virtue_bench/analysis/: __init__.py  discernment.py  tables.py  visualize.py
src/virtue_bench/artifacts/: __init__.py  results.py
src/virtue_bench/core/: __init__.py  bible.py  constants.py  loader.py  psalms.py  schema.py
src/virtue_bench/eval/: __init__.py  experiment.py  scorer.py
src/virtue_bench/runners/: __init__.py  anthropic_api.py  base.py  claude_cli.py  hf_local.py  inspect_ai.py  openai_api.py  pi_cli.py
src/virtue_bench/stats/: __init__.py  bootstrap.py  regression.py  tests.py
