[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "virtue-bench"
version = "2.0.0"
description = "VirtueBench V2: Multi-dimensional virtue evaluation benchmark for LLMs with tripartite and Ignatian temptation models"
requires-python = ">=3.11"
dependencies = [
    "inspect-ai>=0.3.0",
    "anthropic",
    "openai",
    "scipy",
    "tabulate",
    "pydantic>=2.0",
    "pyyaml",
    "matplotlib",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
virtue-bench = "virtue_bench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
