[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "virtue-bench"
version = "2.0.0"
description = "VirtueBench V2: Multi-dimensional virtue evaluation benchmark for LLMs with tripartite and Ignatian temptation models"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Tim Hwang", email = "tim@icmi-proceedings.com"},
    {name = "The Institute for Christian Machine Intelligence"},
]
keywords = [
    "benchmark", "evaluation", "llm", "virtue-ethics",
    "temptation", "alignment", "moral-reasoning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "openai",
    "anthropic",
    "scipy",
    "tabulate",
    "pydantic>=2.0",
    "pyyaml",
]

[project.optional-dependencies]
# Core eval only needs openai + anthropic (included above)
# Optional extras for specific features:
inspect = ["inspect-ai>=0.3.0"]
viz = ["matplotlib"]
dev = ["pytest", "ruff", "build", "twine"]
all = ["inspect-ai>=0.3.0", "matplotlib"]

[project.scripts]
virtue-bench = "virtue_bench.cli:main"

[project.urls]
Homepage = "https://github.com/christian-machine-intelligence/virtue-bench-2"
Documentation = "https://github.com/christian-machine-intelligence/virtue-bench-2#readme"
Repository = "https://github.com/christian-machine-intelligence/virtue-bench-2"
Issues = "https://github.com/christian-machine-intelligence/virtue-bench-2/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
virtue_bench = ["../../data/**/*.csv"]

[tool.ruff]
line-length = 100
